tests/fail/namespace-var1.dit
A {
    print does.not.exist;
}